@@ -23,17 +23,20 @@ bool sympd_cpp(
 Rcpp::List solve_symmetric_cpp(
         arma::mat X,
         bool logdet = false,
-        double epsilon  = 1.490116e-08
+        double epsilon  = 1.490116e-08,
+        bool approx = true
 );
 
 arma::mat solve_symmetric_cpp_matrixonly(
         arma::mat X,
-        double epsilon  = 1.490116e-08
+        double epsilon  = 1.490116e-08,
+        bool approx = true
 );
 
 arma::mat solve_symmetric_cpp_matrixonly_withcheck(
                 arma::mat X,
-                bool& proper
+                bool& proper,
+                bool approx = true
 );
 
 
